creating a simple rest controller with bean

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+#How spring cloud starter config will connect to spring cloud server
+#when the config server is not available optional can be used. later the course the config server will be installed
+spring.config.import=optional:configserver:http://localhost:8888
