copies code from instructro's git

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,31 @@
-#The config properties will be fetched from limits-service.properties in local config repo
-#So the name of this microservice will be as follows
-#This microservice will use the "limits-service" as id to talk to the server configuration
-spring.application.name=limits-service
-#How spring cloud starter config will connect to spring cloud server
-#when the config server is not available optional can be used. later the course the config server will be installed
+##The config properties will be fetched from limits-service.properties in local config repo
+##So the name of this microservice will be as follows
+##This microservice will use the "limits-service" as id to talk to the server configuration
+#spring.application.name=limits-service
+##selecting a profile (qa or dev)
+##but this still uses the default profile due to a bug in spring
+#spring.profiles.active=dev
+##so modify the profile in one level deeper so spring can pick up the right profile
+##spring.cloud.config.profile=dev
+##How spring cloud starter config will connect to spring cloud server
+##when the config server is not available optional can be used. later the course the config server will be installed
+#spring.config.import=configserver:http://localhost:8888
+##logging.level.org.springframework = debug
+#management.endpoints.web.exposure.include=*
+##Instead of getting min/max from bean we can get values from here
+#limits-service.minimum=2
+#limits-service.maximum=998
+
+
+#.........................
+spring.application.name=limitsService
 spring.config.import=optional:configserver:http://localhost:8888
-#Instead of getting min/max from bean we can get values from here
-limits-service.minimum=2
-limits-service.maximum=998
+
+spring.profiles.active=dev
+spring.cloud.config.profile=dev
+
+#spring.cloud.config.name=
+
+limits-service.minimum=3
+limits-service.maximum=997
 
